* UserLoginCompleteHook is always called with its $direct parameter set to
  boolean true. The false case has been removed.
* MagicWord::load() has been marked @internal and may change in the future
  without further notice.
* MediaWiki's virtualrest internal library has been removed in favor of the
  HTTP library like: Guzzle, MultiHttpClient or MwHttpRequest.
* PostgresUpdater::addPgEnumValue() unused everywhere, have been removed
  without deprecation. Use of ENUM is highly discouraged.
* OutputPage::addParserOutputText has been marked @internal since there are no
  known users of it. Its old behavior has been deprecated and will change
  in the future without further notice.
* MediaWikiIntegrationTestCase::$tablesUsed has been deprecated. The framework
  now detects these automatically.
* …

=== Deprecations in 1.42 ===
* API modules using ApiBase::requirePostedParameters() must also override
  mustBePosted() to return true.
* BlockManager::getUserBlock() was deprecated. Instead use
  BlockManager::getBlock(), which expects the caller to do ipblock-exempt
  checking.
* User::isBlocked(), ::isBlockedFromCreateAccount() and ::isBlockedFrom() now
  emit deprecation warnings. They were deprecated since 1.34, 1.37 and 1.33
  respectively.
* DatabaseBlock::newFromID() was deprecated and will emit deprecation warnings.
  Instead use DatabaseBlockStore::newFromID().
* DatabaseBlock::getAutoblockExpiry() was deprecated without replacement.
* MagicWord::getId() has been deprecated.
* MagicWordFactory::getSubstIDs() has been deprecated.
* Status::setMessageLocalizer is deprecated. Callers that want to control the
  localization of the Status object should obtain a StatusFormatter from
  the StatusFormatterFactory.
* Vuex has been deprecated in favor of its successor, Pinia. Though deprecated,
  Vuex 4 will remain accessible for the foreseeable future. Pinia should be used
  for new projects.
* Title::getBrokenLinksFrom() has been deprecated.